--- a/style.css
+++ b/style.css
@@ -1,2 +1,7 @@
 @import url('https://fonts.cdnfonts.com/css/hero-new');
-                
+
+body {
+    font-family: 'Hero New', sans-serif;
+    min-height: 100vh;   
+    margin: 0;                                         
+}
