--- a/style.css
+++ b/style.css
@@ -5,3 +5,8 @@ body {
     min-height: 100vh;   
     margin: 0;                                         
 }
+
+img {
+    width: 100px;
+    height: 100px;
+}
