--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ button {
 
 .cards {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 52px;
     padding-bottom: 120px;
